--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -18,19 +18,29 @@
     app:layout_constraintRight_toRightOf="parent"
     android:layout_marginTop="20dp"
     android:textStyle="bold"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cuenta"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/tvReg"
+        android:id="@+id/tvCuenta"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
     <EditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/etCorreo"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvCuenta"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:hint="Correo"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="8dp"
         android:drawableLeft="@drawable/ic_email_black_24dp"
         android:drawablePadding="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+
         />
     <EditText
         android:layout_width="0dp"
@@ -75,23 +85,23 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnRegistrar"
-        android:text="registrar"
-        android:drawableLeft="@drawable/ic_check_black_24dp"
+        android:id="@+id/btnSig"
+        android:text="Siguiente"
+        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
         android:drawablePadding="2dp"
         app:layout_constraintTop_toBottomOf="@id/etConfContra"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="40dp"/>
-    <Button
+        android:layout_marginTop="80dp"/>
+    <!--<Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:id="@+id/btnRegistDueño"
         android:text="Registrar como dueño"
-        app:layout_constraintTop_toBottomOf="@id/btnRegistrar"
+        app:layout_constraintTop_toBottomOf="@id/btnSig"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"/>-->
 
 </android.support.constraint.ConstraintLayout>
