--- a/app/src/main/res/layout/activity_info_personal.xml
+++ b/app/src/main/res/layout/activity_info_personal.xml
@@ -134,6 +134,8 @@
             android:id="@+id/rbDueño"/>
     </RadioGroup>
     <Button
+
+        android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Siguiente"
