--- a/app/src/main/res/layout/activity_info_personal.xml
+++ b/app/src/main/res/layout/activity_info_personal.xml
@@ -6,17 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.example.android.prototipo.InfoPersonal"
     android:background="@drawable/fondo1">
+
     <TextView
+        android:id="@+id/tvReg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registro"
+        android:layout_marginTop="20dp"
+        android:text="@string/perreg"
         android:textSize="24sp"
-        android:id="@+id/tvReg"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
