--- a/app/src/main/res/layout/activity_datos_estacionamiento.xml
+++ b/app/src/main/res/layout/activity_datos_estacionamiento.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvDatEst"
-        android:text="Datos Estaconamiento"
+        android:text="Datos Estacionamiento"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
