--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -20,8 +20,7 @@
         android:id="@+id/fab"
         app:layout_anchorGravity="bottom|right"
         app:layout_anchor="@id/map"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="16dp"
+        android:layout_margin="16dp"
         android:src="@drawable/ic_my_location_black_24dp"
          android:layout_gravity=""/>
 
