Traduccion ingles/español del registro del usuario

--- a/app/src/main/res/layout/activity_registro_tab.xml
+++ b/app/src/main/res/layout/activity_registro_tab.xml
@@ -40,68 +40,64 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
                     <EditText
+                        android:id="@+id/etCorreo"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/etCorreo"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        android:hint="Correo"
                         android:layout_marginTop="16dp"
+                        android:alpha=".6"
+                        android:background="#ffc107"
                         android:drawableLeft="@drawable/ic_email_black_24dp"
                         android:drawablePadding="8dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:background="#ffc107"
-                        android:alpha=".6"
+                        android:hint="@string/regCorreo"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
 
                         />
+
                     <EditText
-                        android:background="#ffc107"
-                        android:alpha=".6"
+                        android:id="@+id/etUsuario"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/etUsuario"
-                        app:layout_constraintTop_toBottomOf="@id/etCorreo"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        android:hint="Usuario"
                         android:layout_marginTop="20dp"
+                        android:alpha=".6"
+                        android:background="#ffc107"
                         android:drawableLeft="@drawable/ic_person_black_24dp"
                         android:drawablePadding="8dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginEnd="8dp"/>
+                        android:hint="@string/regus"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/etCorreo" />
+
                     <EditText
-                        android:layout_marginTop="20dp"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
                         android:id="@+id/etContraseña"
-                        app:layout_constraintTop_toBottomOf="@id/etUsuario"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        android:hint="Contraseña"
-                        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
-                        android:drawablePadding="8dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:background="#ffc107"
-                        android:alpha=".6"/>
-                    <EditText
-                        android:layout_marginTop="20dp"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/etConfContra"
-                        app:layout_constraintTop_toBottomOf="@id/etContraseña"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        android:hint="Confirmar contraseña"
+                        android:layout_marginTop="20dp"
+                        android:alpha=".6"
+                        android:background="#ffc107"
                         android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                         android:drawablePadding="8dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginEnd="8dp"
+                        android:hint="@string/regcon"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/etUsuario" />
+
+                    <EditText
+                        android:id="@+id/etConfContra"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:alpha=".6"
                         android:background="#ffc107"
-                        android:alpha=".6"/>
+                        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
+                        android:drawablePadding="8dp"
+                        android:hint="@string/regconf"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/etContraseña" />
 
                     <Button
                         android:id="@+id/p1p2"
@@ -110,7 +106,7 @@
                         android:layout_marginTop="272dp"
                         android:drawablePadding="2dp"
                         android:drawableRight="@drawable/ic_navigate_next_black_24dp"
-                        android:text="Siguiente"
+                        android:text="@string/regS"
                         app:layout_constraintHorizontal_bias="0.501"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
