Layout hasta registro datos generales estacionamiento

--- a/app/src/main/res/layout/activity_registro_dueno.xml
+++ b/app/src/main/res/layout/activity_registro_dueno.xml
@@ -4,82 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tab3"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvCuenta"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:gravity="center"
-        android:text="Tipo de Cuenta"
-        android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <RadioGroup
-        android:id="@+id/rbgCuenta"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvCuenta">
-
-        <RadioButton
-            android:id="@+id/rbRegu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:checked="true"
-            android:text="Regular" />
-
-        <RadioButton
-            android:id="@+id/rbPremium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:text="Premium" />
-    </RadioGroup>
-
-    <TextView
-        android:id="@+id/tvInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:gravity="center"
-        android:text="Información del Vehiculo"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/rbgCuenta" />
-
-    <EditText
-        android:id="@+id/etMatricula"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:alpha=".6"
-        android:background="#ffc107"
-        android:hint="Matrícula"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvInfo" />
-
-    <Button
-        android:id="@+id/btnRegCliente"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        android:alpha=".8"
-        android:background="#4caf50"
-        android:text="Registrar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etMatricula"
-        app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
