--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,17 @@
     >
 
     <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/formbacklogin" />
+
+    <ImageView
         android:id="@+id/fondo"
         android:layout_width="210dp"
         android:layout_height="210dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="16dp"
         android:scaleType="centerCrop"
         android:src="@drawable/car"
         android:tint="@color/negro"
@@ -20,15 +27,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <EditText
         android:id="@+id/etUsu"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/redondeado_amarillo"
         android:drawableLeft="@drawable/ic_person_black_24dp"
-        android:drawablePadding="8dp"
+        android:drawablePadding="20dp"
+        android:paddingStart="10dp"
         android:hint="Usuario"
         android:imeOptions="actionNext"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -37,13 +47,15 @@
 
     <EditText
         android:id="@+id/etPas"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
         android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
-        android:drawablePadding="8dp"
+        android:drawablePadding="20dp"
+        android:paddingStart="10dp"
+        android:background="@drawable/redondeado_amarillo"
         android:hint="Contraseña"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
@@ -53,10 +65,11 @@
 
     <Button
         android:id="@+id/btnIniciar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:text="Iniciar sesion"
+        android:background="@drawable/redondeado_gris"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etPas"
@@ -66,10 +79,11 @@
     <Button
         android:id="@+id/btnRegistro"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="0dp"
         android:text="Registrarse"
+        android:background="@drawable/redondeado_blanco_transparente"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
