--- a/app/src/main/res/layout/activity_registro_tab.xml
+++ b/app/src/main/res/layout/activity_registro_tab.xml
@@ -352,8 +352,12 @@
                         android:id="@+id/tab4"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
-
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    />
                         <EditText
+                            android:inputType="text"
                             android:id="@+id/etNombreEst"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -362,7 +366,9 @@
                             android:hint="Nombre del estacionamiento"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/tvDatEst" />
+                            app:layout_constraintTop_toBottomOf="@+id/tvDatEst"
+                            android:imeOptions="actionNext"
+                            android:maxLines="1"/>
 
                         <EditText
                             android:id="@+id/etRFC"
@@ -372,10 +378,13 @@
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="20dp"
                             android:hint="RFC"
+                            android:inputType="text"
                             app:layout_constraintRight_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/etNombreEst" />
+                            app:layout_constraintTop_toBottomOf="@id/etNombreEst"
+                            android:imeOptions="actionNext"
+                            android:maxLines="1"/>
 
                         <TextView
                             android:id="@+id/tvHora"
@@ -387,7 +396,8 @@
                             android:textColor="@color/negro"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/etRFC" />
+                            app:layout_constraintTop_toBottomOf="@+id/etRFC"
+                            />
 
                         <TextView
                             android:id="@+id/de"
@@ -455,7 +465,9 @@
                             android:inputType="numberDecimal"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/tvPrecio" />
+                            app:layout_constraintTop_toBottomOf="@id/tvPrecio"
+                            android:maxLines="1"
+                            android:imeOptions="actionNext"/>
 
                         <EditText
                             android:id="@+id/etPrecioFracc"
@@ -467,7 +479,9 @@
                             android:inputType="numberDecimal"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/etPrecioHora" />
+                            app:layout_constraintTop_toBottomOf="@id/etPrecioHora"
+                            android:maxLines="1"
+                            android:imeOptions="actionDone"/>
 
                         <Button
                             android:id="@+id/btnsigEst"
@@ -492,15 +506,17 @@
                             android:textSize="18sp"
                             android:layout_height="wrap_content"
                             android:text="Dirección"
-                            android:background="@drawable/redondeado_blanco_transparente"
-                            android:layout_marginTop="16dp"
+                            android:background="#fff"
+                            android:alpha=".6"
+                            android:layout_marginTop="8dp"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             android:layout_margin="8dp"
                             android:id="@+id/tvDir"
-                            android:padding="12dp"
-                            android:gravity="center"/>
+                            android:gravity="center"
+                            android:maxLines="1"
+                            android:imeOptions="actionNext"/>
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -510,31 +526,38 @@
                             app:layout_constraintTop_toBottomOf="@id/tvDir"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            android:background="@drawable/redondeado_amarillo"
                             android:inputType="textPersonName"
-                            />
+                            android:maxLines="1"
+                            android:imeOptions="actionNext"/>
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Num Ext"
                             android:id="@+id/etNumExt"
-                            android:background="@drawable/redondeado_amarillo"
                             android:layout_margin="8dp"
                             app:layout_constraintTop_toBottomOf="@id/etCalle"
-                            app:layout_constraintRight_toLeftOf="parent"/>
+                            app:layout_constraintRight_toLeftOf="parent"
+                            android:imeOptions="actionNext"
+                            android:inputType="number"
+                            android:maxLines="1"/>
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/etColonia"
                             android:hint="Colonia"
-                            android:background="@drawable/redondeado_amarillo"
                             android:layout_margin="8dp"
                             app:layout_constraintTop_toBottomOf="@id/etNumExt"
-                            app:layout_constraintLeft_toLeftOf="parent"/>
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:imeOptions="actionNext"
+                            android:inputType="text"
+                            android:maxLines="1"
+                            />
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            
+                            android:inputType="number"
+                            android:imeOptions="actionNext"
+                            android:maxLines="1"
                             android:hint="Codigo Postal"
                             android:layout_margin="8dp"
                             android:id="@+id/etCP"
@@ -545,24 +568,26 @@
                             android:layout_height="wrap_content"
                             android:id="@+id/etCiudad"
                             android:hint="Ciudad"
-                            android:background="@drawable/redondeado_amarillo"
                             android:layout_margin="8dp"
                             app:layout_constraintTop_toBottomOf="@id/etCP"
-                            app:layout_constraintLeft_toLeftOf="parent"/>
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:maxLines="1"
+                            android:inputType="text"
+                            android:imeOptions="actionNext"/>
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/etEstado"
                             android:hint="Estado"
-                            android:background="@drawable/redondeado_amarillo"
+                            android:inputType="text"
                             android:layout_margin="8dp"
                             app:layout_constraintTop_toBottomOf="@id/etCiudad"
                             app:layout_constraintLeft_toLeftOf="parent"
-                            />
+                            android:imeOptions="actionDone"
+                            android:maxLines="1"/>
                         <Button
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/redondeado_amarillo"
                             android:backgroundTint="#4caf50"
                             android:text="Registrar"
                             android:padding="12dp"
