--- a/app/src/main/res/layout/activity_registro_tab.xml
+++ b/app/src/main/res/layout/activity_registro_tab.xml
@@ -189,10 +189,17 @@
                             app:layout_constraintTop_toBottomOf="@+id/etApMat"
                             tools:layout_constraintLeft_creator="1"
                             tools:layout_constraintRight_creator="1" />
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="16sp"
+    android:text="Género"
+    android:id="@+id/tvGenero"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/etFechaN"/>
                         <Spinner
                             android:id="@+id/spGenero"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:layout_marginEnd="8dp"
@@ -202,7 +209,7 @@
                             android:gravity="center_vertical"
                             android:spinnerMode="dialog"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintLeft_toRightOf="@id/tvGenero"
                             app:layout_constraintTop_toBottomOf="@id/etFechaN" />
 
                         <TextView
