--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,15 +32,13 @@
         android:id="@+id/etUsu"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/redondeado_amarillo"
         android:drawableLeft="@drawable/ic_person_black_24dp"
         android:drawablePadding="20dp"
-        android:paddingStart="10dp"
-        android:hint="Usuario"
+        android:hint="@string/mainus"
         android:imeOptions="actionNext"
+        android:paddingStart="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fondo" />
@@ -49,16 +47,14 @@
         android:id="@+id/etPas"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/redondeado_amarillo"
         android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
         android:drawablePadding="20dp"
-        android:paddingStart="10dp"
-        android:background="@drawable/redondeado_amarillo"
-        android:hint="Contraseña"
+        android:hint="@string/mainc"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
+        android:paddingStart="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etUsu" />
@@ -68,8 +64,8 @@
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
-        android:text="Iniciar sesion"
         android:background="@drawable/redondeado_gris"
+        android:text="@string/mainis"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etPas"
@@ -81,9 +77,8 @@
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="150dp"
         android:layout_height="30dp"
-        android:layout_marginTop="0dp"
-        android:text="Registrarse"
         android:background="@drawable/redondeado_blanco_transparente"
+        android:text="@string/mainre"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
