Traduccion ingles/español de la clase de registro completo

--- a/app/src/main/res/layout/activity_registro_completo.xml
+++ b/app/src/main/res/layout/activity_registro_completo.xml
@@ -57,7 +57,7 @@
                             android:layout_marginTop="8dp"
                             android:drawableLeft="@drawable/ic_person_black_24dp"
                             android:ems="10"
-                            android:hint="Usuario"
+                            android:hint="@string/regcu"
                             android:inputType="textPersonName"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
                             android:layout_marginTop="10dp"
                             android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                             android:ems="10"
-                            android:hint="Contraseña"
+                            android:hint="@string/regcp"
                             android:inputType="textPassword"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +87,7 @@
                             android:layout_marginTop="10dp"
                             android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                             android:ems="10"
-                            android:hint="Confirmar Contraseña"
+                            android:hint="@string/regcc"
                             android:inputType="textPassword"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +102,7 @@
                             android:layout_marginTop="10dp"
                             android:drawableLeft="@drawable/ic_email_black_24dp"
                             android:ems="10"
-                            android:hint="Correo Electronico"
+                            android:hint="@string/regcce"
                             android:inputType="textEmailAddress"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
