--- a/app/src/main/res/layout/activity_registro_completo.xml
+++ b/app/src/main/res/layout/activity_registro_completo.xml
@@ -140,7 +140,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:background="@color/Gris"
-                            android:text="Información Personal"
+                            android:text="@string/regip"
                             android:textAlignment="center"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
@@ -155,7 +155,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:drawablePadding="8dp"
-                            android:hint="Nombre(s)"
+                            android:hint="@string/regnombredueño"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/tvCuenta"
@@ -166,10 +166,8 @@
                             android:id="@+id/etApPat"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginStart="8dp"
                             android:layout_marginTop="20dp"
-                            android:hint="Apellido Paterno"
+                            android:hint="@string/regapellidopaterno"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/etNombreDueño"
@@ -180,10 +178,8 @@
                             android:id="@+id/etApMat"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginStart="8dp"
                             android:layout_marginTop="20dp"
-                            android:hint="Apellido Materno"
+                            android:hint="@string/regapellidomaterno"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/etApPat"
@@ -194,10 +190,8 @@
                             android:id="@+id/etFechaN"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginStart="8dp"
                             android:layout_marginTop="20dp"
-                            android:hint="dd/MM/yyyy"
+                            android:hint="@string/regfecha"
                             android:textAllCaps="true"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
@@ -229,7 +223,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:text="Tipo de usuario"
+                            android:text="@string/regtipousuario"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             app:layout_constraintLeft_toLeftOf="parent"
@@ -249,14 +243,14 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="12dp"
                                 android:checked="true"
-                                android:text="Cliente" />
+                                android:text="@string/regcliente" />
 
                             <RadioButton
                                 android:id="@+id/rbDueño"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="12dp"
-                                android:text="Dueño" />
+                                android:text="@string/regdueño" />
                         </RadioGroup>
 
                         <Button
@@ -264,7 +258,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
-                            android:text="Siguiente"
+                            android:text="@string/regisiguiente"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
