--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -3,6 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="assaassaa"
+        android:translationZ="1dp"
+        android:background="#fff"
+        android:id="@+id/tvMaps"/>
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -20,9 +27,10 @@
         android:id="@+id/fab"
         app:layout_anchorGravity="bottom|right"
         app:layout_anchor="@id/map"
-        android:layout_margin="16dp"
+        android:layout_marginBottom="54dp"
+        android:layout_marginRight="16dp"
         android:src="@drawable/ic_my_location_black_24dp"
-         android:layout_gravity=""/>
+        />
 
 
 </android.support.design.widget.CoordinatorLayout>
