--- a/app/src/main/res/drawable/redondeado_gris.xml
+++ b/app/src/main/res/drawable/redondeado_gris.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/Gris"/>
+            <solid android:color="#ffffff"/>
             <stroke android:width="0.1dp"
                 android:color="@color/negro"/>
             <corners android:radius="40dp"/>
