--- a/app/src/main/res/layout/activity_datos__esta.xml
+++ b/app/src/main/res/layout/activity_datos__esta.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.prototipo.AccesoDatosWIP.Datos_Esta"
+    tools:context="com.example.android.prototipo.Datos_Esta"
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
         android:id="@+id/tvNombre"
-        android:layout_width="match_constraint"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
@@ -21,7 +20,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.016" />
+        app:layout_constraintVertical_bias="0.016"
+        android:layout_width="0dp" />
 
     <TextView
         android:id="@+id/tvDireccion"
