--- a/app/src/main/res/layout/activity_datos__esta.xml
+++ b/app/src/main/res/layout/activity_datos__esta.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/tvNombre"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
@@ -20,9 +21,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.016"
-        android:layout_width="0dp" />
-
+        app:layout_constraintVertical_bias="0.016" />
 
     <TextView
         android:id="@+id/tvDireccion"
