dimens del registro completo para nexus4

--- a/app/src/main/res/layout/activity_registro_completo.xml
+++ b/app/src/main/res/layout/activity_registro_completo.xml
@@ -54,7 +54,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="@dimen/editmargen"
                             android:drawableLeft="@drawable/ic_person_black_24dp"
                             android:ems="10"
                             android:hint="@string/regcu"
@@ -69,7 +69,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="@dimen/editmargen"
                             android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                             android:ems="10"
                             android:hint="@string/regcp"
@@ -84,7 +84,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="@dimen/editmargen"
                             android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                             android:ems="10"
                             android:hint="@string/regcc"
@@ -99,7 +99,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="@dimen/editmargen"
                             android:drawableLeft="@drawable/ic_email_black_24dp"
                             android:ems="10"
                             android:hint="@string/regcce"
@@ -112,7 +112,7 @@
                             android:id="@+id/btnContinuar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
+                            android:layout_marginBottom="@dimen/botonmargen"
                             android:layout_marginEnd="8dp"
                             android:drawableRight="@drawable/ic_navigate_next_black_24dp"
                             android:text="Continuar"
